// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetDistribution correctly 1`] = `
<section
  className="fdk-container-detail"
>
  <h4>
    AAMarkagrensen Oslo Kommune og nærliggende kommuner
  </h4>
  <p
    className="fdk-ingress"
  >
    Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4. september 2015 nr. 1032 om justering av markagrensen fastlegger markalovens geografiske virkeområde med tilhørende kart.
  </p>
  <div>
    <h5
      className="mt-5"
    >
      AccessURL
    </h5>
    <p
      className="fdk-ingress"
    >
      <a
        className="dataset-distribution-accessurl"
        href="http://www.detteerenlenke.no/til-nedlasting"
        key="dataset-distribution-accessurl-0"
      >
        http://www.detteerenlenke.no/til-nedlasting
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
      <a
        className="dataset-distribution-accessurl"
        href="http://www.detteerenannenlenke.no/til-en-annen-nedlasting
"
        key="dataset-distribution-accessurl-1"
      >
        http://www.detteerenannenlenke.no/til-en-annen-nedlasting

        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
      <a
        className="dataset-distribution-accessurl"
        href="http://www.detteerentredjelenke.no/til-en-tredje-nedlasting"
        key="dataset-distribution-accessurl-2"
      >
        http://www.detteerentredjelenke.no/til-en-tredje-nedlasting
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </p>
  </div>
  <div>
    <h5
      className="mt-5"
    >
      License
    </h5>
    <p
      className="fdk-ingress"
    >
      <a
        href="https://www.kartverket.no/geodataarbeid/standarder/sosi/"
      >
        SOSI
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </p>
  </div>
  <div>
    <h5
      className="mt-5"
    >
      Conforms to
    </h5>
    <p
      className="fdk-ingress"
    >
      <a
        href="https://www.kartverket.no/geodataarbeid/standarder/sosi/"
        key="https://www.kartverket.no/geodataarbeid/standarder/sosi/"
      >
        SOSI
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </p>
  </div>
  <div>
    <h5
      className="mt-5"
    >
      More information about this distribution
    </h5>
    <p
      className="fdk-ingress"
    />
  </div>
</section>
`;

exports[`should render DatasetDistribution correctly 2`] = `
<section
  className="fdk-container-detail"
>
  <h4>
    AAMarkagrensen Oslo Kommune og nærliggende kommuner
  </h4>
  <p
    className="fdk-ingress"
  >
    Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4. september 2015 nr. 1032 om justering av markagrensen fastlegger markalovens geografiske virkeområde med tilhørende kart.
  </p>
  <div>
    <h5
      className="mt-5"
    >
      Type
    </h5>
    <p
      className="fdk-ingress"
    >
      Feed
    </p>
  </div>
  <div>
    <h5
      className="mt-4"
    >
      Format
    </h5>
    <DistributionFormat
      code=""
      key="dataset-distribution-format0"
      text="application/json"
      type={null}
    />
    <DistributionFormat
      code=""
      key="dataset-distribution-format0"
      text="xml"
      type={null}
    />
  </div>
  <div>
    <h5
      className="mt-5"
    >
      License
    </h5>
    <p
      className="fdk-ingress"
    >
      <a
        href="https://www.kartverket.no/geodataarbeid/standarder/sosi/"
      >
        SOSI
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </p>
  </div>
  <div>
    <h5
      className="mt-5"
    >
      Conforms to
    </h5>
    <p
      className="fdk-ingress"
    >
      <a
        href="https://www.kartverket.no/geodataarbeid/standarder/sosi/"
        key="https://www.kartverket.no/geodataarbeid/standarder/sosi/"
      >
        SOSI
        <i
          className="fa fa-external-link fdk-fa-right"
        />
      </a>
    </p>
  </div>
  <div>
    <h5
      className="mt-5"
    >
      More information about this distribution
    </h5>
    <p
      className="fdk-ingress"
    />
  </div>
</section>
`;

exports[`should render DatasetDistribution correctly with no props 1`] = `
<section
  className="fdk-container-detail"
>
  <h4 />
</section>
`;
